--- a/tareas/src/app/pages/login/login.css
+++ b/tareas/src/app/pages/login/login.css
@@ -2,9 +2,9 @@
 .form-container {
   width: 320px;
   border-radius: 0.75rem;
-  background-color: rgba(17, 24, 39, 1);
+  background-color: transparent;
   padding: 2rem;
-  color: rgba(243, 244, 246, 1);
+  color: #facc15;
 }
 
 .title {
@@ -26,22 +26,22 @@
 
 .input-group label {
   display: block;
-  color: rgba(156, 163, 175, 1);
+  color: #facc15;
   margin-bottom: 4px;
 }
 
 .input-group input {
   width: 100%;
   border-radius: 0.375rem;
-  border: 1px solid rgba(55, 65, 81, 1);
+  border: 1px solid #2e1065;
   outline: 0;
-  background-color: rgba(17, 24, 39, 1);
+  background-color: #4B0082;
   padding: 0.75rem 1rem;
   color: rgba(243, 244, 246, 1);
 }
 
 .input-group input:focus {
-  border-color: rgba(167, 139, 250);
+  border-color: #facc15;
 }
 
 .forgot {
@@ -49,27 +49,28 @@
   justify-content: flex-end;
   font-size: 0.75rem;
   line-height: 1rem;
-  color: rgba(156, 163, 175,1);
+  color: #facc15;
   margin: 8px 0 14px 0;
 }
 
 .forgot a,.signup a {
-  color: rgba(243, 244, 246, 1);
+  color: #facc15;
   text-decoration: none;
   font-size: 14px;
 }
 
 .forgot a:hover, .signup a:hover {
-  text-decoration: underline rgba(167, 139, 250, 1);
+  text-decoration: underline #facc15;
 }
 
 .sign {
-  display: block;
-  width: 100%;
-  background-color: rgba(167, 139, 250, 1);
-  padding: 0.75rem;
+  display: inline-block;
+  width: auto;
+  min-width: 120px;
+  background-color: #facc15;
+  padding: 0.75rem 1.5rem;
   text-align: center;
-  color: rgba(17, 24, 39, 1);
+  color: #2e1065;
   border: none;
   border-radius: 0.375rem;
   font-weight: 600;
@@ -92,7 +93,7 @@
   padding-right: 0.75rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
-  color: rgba(156, 163, 175, 1);
+  color:#facc15;
 }
 
 .social-icons {
@@ -111,12 +112,19 @@
 .social-icons .icon svg {
   height: 1.25rem;
   width: 1.25rem;
-  fill: #fff;
+  fill:#facc15;
 }
 
 .signup {
   text-align: center;
   font-size: 0.75rem;
   line-height: 1rem;
-  color: rgba(156, 163, 175, 1);
+  color:#facc15;
+}
+
+.form-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
