--- a/tareas/src/app/pages/login/login.html
+++ b/tareas/src/app/pages/login/login.html
@@ -17,9 +17,7 @@
 			<button class="sign">Sign in</button>
 		</form>
 		<div class="social-message">
-			<div class="line"></div>
 			<p class="message">Login with social accounts</p>
-			<div class="line"></div>
 		</div>
 		<div class="social-icons">
 			<button aria-label="Log in with Google" class="icon">
@@ -38,8 +36,8 @@
 				</svg>
 			</button>
 		</div>
-		<p class="signup">Don't have an account?
-			<a rel="noopener noreferrer" href="#" class="">Sign up</a>
+		<p class="signup">¿No tienes una cuenta?
+			<a rel="noopener noreferrer" href="registro" class="">Registrate</a>
 		</p>
 	</div>
 </div>
