--- a/tareas/src/app/pages/registro/registro.css
+++ b/tareas/src/app/pages/registro/registro.css
@@ -2,14 +2,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  max-width: 350px;
-  padding: 20px;
-  border-radius: 20px;
-  position: relative;
-  background-color: #1a1a1a;
-  color: #fff;
-  border: 1px solid #333;
+  align-items: center;
 }
 
 .title {
@@ -20,7 +13,7 @@
   display: flex;
   align-items: center;
   padding-left: 30px;
-  color: #00bfff;
+  color: #facc15;
 }
 
 .title::before {
@@ -42,13 +35,13 @@
   width: 16px;
   border-radius: 50%;
   left: 0px;
-  background-color: #00bfff;
+  background-color: #facc15;
 }
 
 .message, 
 .signin {
   font-size: 14.5px;
-  color: rgba(255, 255, 255, 0.7);
+  color:#facc15;
 }
 
 .signin {
@@ -56,11 +49,11 @@
 }
 
 .signin a:hover {
-  text-decoration: underline royalblue;
+  text-decoration: underline #facc15;
 }
 
 .signin a {
-  color: #00bfff;
+  color: #facc15;
 }
 
 .flex {
@@ -75,16 +68,16 @@
 
 .form label .input {
   background-color: #333;
-  color: #fff;
+  color:#facc15;
   width: 100%;
   padding: 20px 05px 05px 10px;
   outline: 0;
-  border: 1px solid rgba(105, 105, 105, 0.397);
+  border: 1px solid #2e1065;
   border-radius: 10px;
 }
 
 .form label .input + span {
-  color: rgba(255, 255, 255, 0.5);
+  color:#facc15;
   position: absolute;
   left: 10px;
   top: 0px;
@@ -100,7 +93,7 @@
 
 .form label .input:focus + span,
 .form label .input:valid + span {
-  color: #00bfff;
+  color: #facc15;
   top: 0px;
   font-size: 0.7em;
   font-weight: 600;
@@ -115,14 +108,16 @@
   outline: none;
   padding: 10px;
   border-radius: 10px;
-  color: #fff;
+  color: #2e1065;
   font-size: 16px;
   transform: .3s ease;
-  background-color: #00bfff;
+  background-color:#facc15;
 }
 
 .submit:hover {
-  background-color: #00bfff96;
+  background-color: #2e1065;
+  color: #facc15;
+  cursor: pointer;
 }
 
 @keyframes pulse {
