--- a/tareas/src/app/pages/registro/registro.html
+++ b/tareas/src/app/pages/registro/registro.html
@@ -1,32 +1,28 @@
-<!-- From Uiverse.io by ammarsaa --> 
+<!-- From Uiverse.io by ammarsaa -->
 <form class="form">
-    <p class="title">Register </p>
-    <p class="message">Signup now and get full access to our app. </p>
-        <div class="flex">
-        <label>
-            <input class="input" type="text" placeholder="" required="">
-            <span>Firstname</span>
-        </label>
-
-        <label>
-            <input class="input" type="text" placeholder="" required="">
-            <span>Lastname</span>
-        </label>
-    </div>  
-            
-    <label>
-        <input class="input" type="email" placeholder="" required="">
-        <span>Email</span>
-    </label> 
-        
-    <label>
-        <input class="input" type="password" placeholder="" required="">
-        <span>Password</span>
-    </label>
-    <label>
-        <input class="input" type="password" placeholder="" required="">
-        <span>Confirm password</span>
-    </label>
-    <button class="submit">Submit</button>
-    <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
+  <p class="title">Registro</p>
+  <p class="message">
+Regístrate ahora y obtén acceso completo a nuestra aplicación.</p>
+  <label>
+    <input class="input" type="text" placeholder="" required="" />
+    <span>Nombre</span>
+  </label>
+  <label>
+    <input class="input" type="text" placeholder="" required="" />
+    <span>Apellido</span>
+  </label>
+  <label>
+    <input class="input" type="email" placeholder="" required="" />
+    <span>Email</span>
+  </label>
+  <label>
+    <input class="input" type="password" placeholder="" required="" />
+    <span>Contraseña</span>
+  </label>
+  <label>
+    <input class="input" type="password" placeholder="" required="" />
+    <span>Confirmar contraseña</span>
+  </label>
+  <button class="submit">Enviar</button>
+  <p class="signin">¿Ya tienes una cuenta? <a href="login">Iniciar sesión</a></p>
 </form>
