--- a/tareas/src/styles.css
+++ b/tareas/src/styles.css
@@ -11,7 +11,7 @@
       21px 30px,
     radial-gradient(
         circle farthest-side at 0% 50%,
-        #2c3539 24%,
+        #2e1065 24%,
         rgba(240, 166, 17, 0) 0
       )
       19px 30px,
@@ -25,28 +25,28 @@
     linear-gradient(
         150deg,
         #282828 24%,
-        #2c3539 0,
-        #2c3539 26%,
+        #2e1065 0,
+        #2e1065 26%,
         rgba(240, 166, 17, 0) 0,
         rgba(240, 166, 17, 0) 74%,
-        #2c3539 0,
-        #2c3539 76%,
+        #2e1065 0,
+        #2e1065 76%,
         #282828 0
       )
       0 0,
     linear-gradient(
         30deg,
         #282828 24%,
-        #2c3539 0,
-        #2c3539 26%,
+        #2e1065 0,
+        #2e1065 26%,
         rgba(240, 166, 17, 0) 0,
         rgba(240, 166, 17, 0) 74%,
-        #2c3539 0,
-        #2c3539 76%,
+        #2e1065 0,
+        #2e1065 76%,
         #282828 0
       )
       0 0,
-    linear-gradient(90deg, #2c3539 2%, #282828 0, #282828 98%, #2c3539 0%) 0 0
+    linear-gradient(90deg, #2e1065 2%, #282828 0, #282828 98%, #2e1065 0%) 0 0
       #282828;
   background-size: 40px 60px;
 }
